<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cloud"

    tools:context=".DiscoverFragment">

    <ImageView
        android:id="@+id/tres_puntos"
        android:layout_width="20dp"
        android:layout_height="38dp"
        android:layout_marginEnd="284dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/grip_lines"
        android:scaleType="centerCrop"
        android:src="@drawable/grip_lines"
        app:layout_constraintBottom_toTopOf="@+id/text_discover"
        app:layout_constraintEnd_toStartOf="@+id/users"
        app:layout_constraintHorizontal_bias="0.574"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_discover"
        android:layout_width="206dp"
        android:layout_height="56dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="72dp"
        android:lineSpacingExtra="0.5sp"
        android:text="@string/discover"
        android:textColor="@color/title_color"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/users"
        android:layout_width="32dp"
        android:layout_height="40dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/users"
        android:scaleType="centerCrop"
        android:src="@drawable/users"
        app:layout_constraintBottom_toTopOf="@+id/text_discover"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/emotions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="276dp"
        android:layout_marginTop="24dp"
        android:text="@string/emotion"
        android:textColor="#616161"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_discover" />

    <TextView
        android:id="@+id/places"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:text="@string/places"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_discover" />

    <TextView
        android:id="@+id/inspiration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="24dp"
        android:text="@string/inspiration"
        android:textColor="#616161"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_discover" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="160dp"
        android:layout_height="300dp"
        android:layout_marginTop="68dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/places">

        <ImageView
            android:id="@+id/coropuna"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/coropuna"
            android:scaleType="centerCrop"
            android:src="@drawable/coropuna"
            app:circularflow_defaultRadius="50dp"
            tools:layout_editor_absoluteX="213dp"
            tools:layout_editor_absoluteY="241dp" />

        <TextView
            android:id="@+id/text_coropuna"
            android:layout_width="123dp"
            android:layout_height="35dp"
            android:layout_marginStart="15sp"
            android:layout_marginTop="250sp"
            android:text="@string/text_coporuna"
            android:textColor="@color/white"
            android:textSize="9sp"
            app:layout_constraintBottom_toBottomOf="@+id/cardView2"
            app:layout_constraintEnd_toEndOf="@+id/cardView2"
            app:layout_constraintStart_toStartOf="@+id/cardView2" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="160dp"
        android:layout_height="300dp"
        android:layout_marginTop="68dp"
        app:cardCornerRadius="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/places">


        <ImageView
            android:id="@+id/ampato"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/ampato"
            android:scaleType="centerCrop"
            android:src="@drawable/ampato"
            app:circularflow_defaultRadius="50dp"
            tools:layout_editor_absoluteX="210dp"
            tools:layout_editor_absoluteY="241dp" />

        <TextView
            android:id="@+id/text_ampato"
            android:layout_width="123dp"
            android:layout_height="45dp"
            android:layout_marginStart="15sp"
            android:layout_marginTop="250sp"
            android:text="@string/text_ampato"
            android:textColor="@color/white"
            android:textSize="8sp"
            app:layout_constraintBottom_toBottomOf="@+id/cardView2"
            app:layout_constraintEnd_toEndOf="@+id/cardView2"
            app:layout_constraintStart_toStartOf="@+id/cardView2" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/explore_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="328dp"
        android:text="@string/Explore_more"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView2" />

    <TextView
        android:id="@+id/text_see_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="340dp"
        android:text="@string/See_all"
        android:textColor="#616161"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.927"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView2" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="40dp"
        android:layout_height="40sp"
        app:cardCornerRadius="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/explore_more"
        app:layout_constraintVertical_bias="0.4">

        <ImageView
            android:id="@+id/kayak"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/ampato"
            android:scaleType="centerCrop"
            android:src="@drawable/kayak"
            app:circularflow_defaultRadius="50dp"
            tools:layout_editor_absoluteX="213dp"
            tools:layout_editor_absoluteY="241dp" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/text_kayak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:text="@string/text_kayak"
        android:textColor="@color/black"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3"
        app:layout_constraintVertical_bias="0.4" />

    <androidx.cardview.widget.CardView
        android:layout_width="40dp"
        android:layout_height="40sp"
        app:cardCornerRadius="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.398"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/explore_more"
        app:layout_constraintVertical_bias="0.4">


        <ImageView
            android:id="@+id/snorkel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/ampato"
            android:scaleType="centerCrop"
            android:src="@drawable/snorkel"
            app:circularflow_defaultRadius="50dp"
            tools:layout_editor_absoluteX="213dp"
            tools:layout_editor_absoluteY="241dp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/text_snorkel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:text="@string/text_snorkel"
        android:textColor="@color/black"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3"
        app:layout_constraintVertical_bias="0.4" />

    <androidx.cardview.widget.CardView
        android:layout_width="40dp"
        android:layout_height="40sp"
        app:cardCornerRadius="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.692"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/explore_more"
        app:layout_constraintVertical_bias="0.4">

        <ImageView
            android:id="@+id/ballons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/ampato"
            android:scaleType="centerCrop"
            android:src="@drawable/ballons"
            app:circularflow_defaultRadius="50dp"
            tools:layout_editor_absoluteX="213dp"
            tools:layout_editor_absoluteY="241dp" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/text_ballons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="256dp"
        android:text="@string/text_ballons"
        android:textColor="@color/black"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3"
        app:layout_constraintVertical_bias="0.403" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="40dp"
        android:layout_height="40sp"
        app:cardCornerRadius="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.897"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/explore_more"
        app:layout_constraintVertical_bias="0.4">

        <ImageView
            android:id="@+id/volcano"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/ampato"
            android:scaleType="centerCrop"
            android:src="@drawable/volcano"
            app:circularflow_defaultRadius="50dp"
            tools:layout_editor_absoluteX="213dp"
            tools:layout_editor_absoluteY="241dp" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/text_volcano"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="332dp"
        android:text="@string/text_volcano"
        android:textColor="@color/black"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3"
        app:layout_constraintVertical_bias="0.403" />


</androidx.constraintlayout.widget.ConstraintLayout>