<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cloud"
    tools:context=".TripsFragment">


    <TextView
        android:id="@+id/text_principal"
        android:layout_width="278dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:lineSpacingExtra="0.5sp"
        android:text="@string/title"
        android:textColor="@color/title_color"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_principal"
        android:layout_width="333dp"
        android:layout_height="90dp"
        android:layout_marginTop="128dp"
        android:lineSpacingExtra="2sp"
        android:text="@string/text_info"
        android:textColor="#616161"
        android:textSize="16sp"

        app:layout_constraintHorizontal_bias="0.205"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/tres_puntos"
        android:layout_width="20dp"
        android:layout_height="38dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="128dp"
        android:contentDescription="@string/puntos_tres"
        android:scaleType="centerCrop"
        android:src="@drawable/tres_puntos"
        app:layout_constraintBottom_toTopOf="@+id/image_principal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/title_principal"
        app:layout_constraintTop_toTopOf="@+id/title_principal" />

    <ImageView
        android:id="@+id/image_principal"
        android:layout_width="match_parent"
        android:layout_height="382dp"
        android:contentDescription="@string/mountain_image"
        android:scaleType="centerCrop"
        android:src="@drawable/mountain"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_go"
        android:layout_width="80dp"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="46dp"
        android:backgroundTint="@color/button"
        android:drawableBottom="@drawable/next2"
        android:textColor="#6D4C41"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toTopOf="@+id/image_principal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_principal"
        tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>